Refactor resource attribute order
The `source` attribute was moved after the `links attribute.
The reasoning is that both of these attributes are intended
to hold links. The source attribute can contain for example
a link to source where the resource was imported. The links
are related to resource itself.
